# col-trans

./: .gitignore  .gitmodules  README.md
coltrans_ros/: CMakeLists.txt  package.xml  setup.cfg
coltrans_ros/coltrans_ros/: cmdCablePayloadState.py  downwash.py  figure8.py  figure8_2.py  figure8_rig.py  helix.py  hello_world.py  omega_test.py  payloadFullState.py  payload_cmd_fullState.py  payload_figure8.py  payload_test.py  teleop.py  test_cfs_payload.py  testyaw.py  vis.py  vis_no_flight.py
coltrans_ros/config/: config.rviz  crazyflies.yaml  crazyflies_1cfs_pointmass.yaml  crazyflies_2cfs_cuboid.yaml  crazyflies_2cfs_payload3.yaml  crazyflies_2cfs_payload3_betafpv.yaml  crazyflies_2cfs_pointmass.yaml  crazyflies_3cfs_pointmass.yaml  crazyflies_3cfs_rig.yaml  crazyflies_4cfs_pointmass.yaml  motion_capture.yaml  teleop.yaml
coltrans_ros/data/: 2cfs_maze.yaml  2cfs_maze_2.yaml  2cfs_maze_3.yaml  2cfs_maze_l_0.75.yaml  2cfs_payload_output.yaml  2cfs_payload_output2.yaml  2cfs_payload_output_with_takeoff.yaml  2cfs_pointmass_output.yaml  2cfs_pointmass_output2.yaml  2cfs_pointmass_ref.yaml  2cfs_takeoff.yaml  3cfs_pointmass_output.yaml  3cfs_pointmass_output2.yaml  data.yaml  figure8_3.csv  output.yaml  takeoff_2cfs_payload_output.yaml
coltrans_ros/data/2cfs_forest/geom/: trajectory.html  trajectory.yaml
coltrans_ros/data/2cfs_window_opt/: trajectory_opt.yaml
coltrans_ros/data/dbcbs_flights/: windows_2robots_dbcbs.html  windows_2robots_dbcbs.yaml  windows_3robots_dbcbs.html  windows_3robots_dbcbs.yaml
coltrans_ros/data/dbcbs_test/: trajectory.html  trajectory.yaml
coltrans_ros/launch/: 1cfs_pointmass.py  2cfs_cuboid.py  2cfs_payload3.py  2cfs_payload3_betafpv.py  2cfs_pointmass.py  3cfs_pointmass.py  3cfs_rig.py  4cfs_pointmass.py  launch.py
hardware/: gen_Pinv.py  (+1 more)
(+411 files in other folders)
