[options.entry_points]
console_scripts =
    downwash = coltrans_ros.downwash:main
    figure8 = coltrans_ros.figure8:main
    helix = coltrans_ros.helix:main
    hello_world = coltrans_ros.hello_world:main
    payload_figure8 = coltrans_ros.payload_figure8:main
    payload_test = coltrans_ros.payload_test:main
    testyaw = coltrans_ros.testyaw:main
    vis = coltrans_ros.vis:main
    vis_no_flight = coltrans_ros.vis_no_flight:main